syntax = "proto3";

package proto;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string phone = 3;
}

message LoginResponse {
    map<string, string> loginResponseMap = 1;
}

message RegisterResponse {
    map<string, string> registerResponseMap = 1;
}

message OtpRequest {
    string otp = 1;
}

message OtpResponse {
    map<string, string> registerResponseMap = 1;
}